# AndesiteEditor

./: CMakeLists.txt  CMakePresets.json  README.md
assets/shaders/: CommonData.slang  DiffuseShader.slang  MixFunctions.txt  SharedBottom.txt  SharedTop.txt
src/: Compiler.h  ConvertNodes.h  InputNodes.h  MacOSGestures.h  MacOSGestures.mm  NodeBasics.h  ShaderNodes.h  Style.h  TextureNodes.h  Types.h  UniqueNodes.h  main.cpp
